# local-weaviate-rag

./: .env.example  .gitignore  .shellcheckrc  API.md  FASTAPI_IMPLEMENTATION.md  Makefile  README.md  config.py  demo.sh  docker-compose.weaviate.yml  docker-compose.yml  embed_text.py  ingest_documents.py  lint.sh  pyproject.toml  query_rag.py  requirements.txt  reset_weaviate.sh  start_api.sh  start_weaviate.sh  stop_weaviate.sh  test_api.py  test_setup.py  test_system.py
api/: __init__.py  exceptions.py  main.py
api/dependencies/: __init__.py  clients.py  config.py
api/models/: __init__.py  common.py  requests.py  responses.py
api/routers/: collections.py  ingest.py  query.py  system.py
api/services/: __init__.py  background.py  ingestion.py  query.py
rag/: ingest.py  query.py  utils.py
tests/: test_functionality.py
